--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -1,11 +1,12 @@
-@charset "UTF-8";
-
 /* ============================================================================
    @group Form support
 ============================================================================ */
 
 @import "config";
 @import "helpers/mixins";
+
+$inputPadding: 5px;
+$inputHeight: 20px;
 
 .form {
 	border: none;
@@ -29,7 +30,6 @@
 		&[type="submit"],
 		&[type="reset"],
 		&[type="image"] {
-			cursor: default;
 			-webkit-appearance: button; //Corrects inability to style clickable 'input' types in iOS
 		}
 
@@ -53,7 +53,8 @@
 			-webkit-box-sizing: content-box;
 			box-sizing: content-box;
 
-			&::-webkit-search-decoration {
+			&::-webkit-search-decoration,
+			&::-webkit-search-cancel-button {
 				-webkit-appearance: none;
 			}
 		}
@@ -70,9 +71,9 @@
 		border: 1px solid;
 		border-color: #777 #ccc #ccc;
 		background: #fff;
-		padding: 0 .429em;
-		height: 1.4em;
-		line-height: 1.4em;
+		padding: 0 $inputPadding;
+		height: $inputHeight;
+		line-height: $inputHeight;
 
 		&:hover {
 			border-color:#777;
@@ -96,6 +97,10 @@
 		&:focus {
 			border-color: $lnColor;
 		}
+		
+		&:active {
+			background-color: lighten(#2d2d2d, 20%);
+		}
 	}
 
 	// button[disabled],
@@ -107,8 +112,8 @@
 		overflow: auto; //Removes default vertical scrollbar in IE6/7/8/9
 		vertical-align: top; //Improves readability and alignment in all browsers
 		height: auto; // overwrite theming on form element
-		line-height: 1.2em;
-		padding: .2em .429em;
+		line-height: $inputHeight;
+		padding: 5px $inputPadding;
 		resize: vertical;
 		min-height: 4em;
 	}
@@ -137,10 +142,11 @@
 	}
 
 	// Removes inner padding and border in FF3+ www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
-	button::-moz-focus-inner,
-	input::-moz-focus-inner {
-		border: 0;
-		padding: 0;
+	button,	input {
+		&::-moz-focus-inner {
+			border: 0;
+			padding: 0;
+		}
 	}
 
 	.ie6-7 {
@@ -173,11 +179,6 @@
 	//
 	// input:invalid, textarea:invalid {}
 
-	// input[type="search"]::-webkit-search-decoration,
-	// input[type="search"]::-webkit-search-cancel-button {
-	//   -webkit-appearance: none;
-	// }
-
 }
 
 .form_horiz {
@@ -194,12 +195,78 @@
 
 .form__row {
 	@extend .i-clfx;
-	padding: .4em 0;
+	clear: both;
+	padding: 10px 0;
+	margin: 0 10px;
 }
+
+.form__row_r {
+	text-align: right;
+}
+
+.form__row_c {
+	text-align: center;
+}
+
+$form-item-padding: 10px;
 
 .form__item {
 	float:left;
-	padding: 0 .4em 0 0;
+	padding: 0 $form-item-padding 0 0;
+	margin-left: 5px;
+}
+
+.form__item_w50 {
+	$itemWidth: 50px;
+	width: $itemWidth - ($form-item-padding);
+
+	input[type="text"],
+	textarea {
+		width: $itemWidth - ($inputPadding * 2);
+	}
+}
+
+.form__item_w100 {
+	$itemWidth: 100px;
+	width: $itemWidth - ($form-item-padding);
+
+	input[type="text"],
+	textarea {
+		width: $itemWidth - ($inputPadding * 2);
+	}
+}
+
+.form__item_w145 {
+	$itemWidth: 145px;
+	width: $itemWidth - ($form-item-padding);
+
+	input[type="text"],
+	textarea {
+		width: $itemWidth - ($inputPadding * 2);
+	}
+}
+
+.form__item_w200 {
+	$itemWidth: 200px;
+	width: $itemWidth - ($form-item-padding);
+
+	input[type="text"],
+	textarea {
+		width: $itemWidth - ($inputPadding * 2);
+	}
+}
+
+// Selectbox plugin support
+
+.sb-w200 {
+	.dropdown,
+	select {
+		width: 200px !important;
+	}
+
+	.dropdown ul {
+		width: 198px !important;
+	}
 }
 
 
