--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -34,22 +34,12 @@ $lnColor: #09f;
 $lnHoverColor: lighten($lnColor, 15%);
 $containerWidth: 974px;
 
-// Crossbrowser custom font support
-
-$onBodyCustomFont: false;
-
-$customFontReg: 'MyrProRegular', Arial, FreeSans, sans-serif;
-$customFontIt: 'myriadproItalic', Arial, FreeSans, sans-serif;
-$customFontBold: 'myriadproBold', Arial, FreeSans, sans-serif;
-$customFontBlIt: 'myriadproBoldItalic', Arial, FreeSans, sans-serif;
-
 // Font configuration
 
 $baseFontFamily: $sans;
 $baseFontFamilyMono: $monospSerif;
 
-@import "compass/typography/vertical_rhythm";
-// http://compass-style.org/reference/compass/typography/vertical_rhythm/
+@import "compass/typography/vertical_rhythm"; // http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
 $base-font-size: 14px; // The font size set on the root html element.
 $base-line-height: 18px; // This line-height determines the basic unit of vertical rhythm.
@@ -62,3 +52,61 @@ $h3-font-size: 1.201 * $base-font-size;
 $h4-font-size: 1 * $base-font-size;
 $h5-font-size: 0.742 * $base-font-size;
 $h6-font-size: 0.618 * $base-font-size;
+
+
+// Crossbrowser font face example
+
+//@font-face {
+//	font-family: 'ALSRublRegular';
+//	src: url('../fonts/ASLRubl/rouble-webfont.eot');
+//	src: url('../fonts/ASLRubl/rouble-webfont.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/ASLRubl/rouble-webfont.woff') format('woff'),
+//	url('../fonts/ASLRubl/rouble-webfont.ttf') format('truetype'),
+//	url('../fonts/ASLRubl/rouble-webfont.svg#ALSRublRegular') format('svg');
+//	font-weight: normal;
+//	font-style: normal;
+//}
+//
+//@font-face {
+//	font-family: 'MyrPro';
+//	src: url('../fonts/myriad/myriadpro-boldit-webfont.eot');
+//	src: url('../fonts/myriad/myriadpro-boldit-webfont.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/myriad/myriadpro-boldit-webfont.woff') format('woff'),
+//	url('../fonts/myriad/myriadpro-boldit-webfont.ttf') format('truetype'),
+//	url('../fonts/myriad/myriadpro-boldit-webfont.svg#MyriadProBoldItalic') format('svg');
+//	font-weight: bold;
+//	font-style: italic;
+//}
+//
+//@font-face {
+//	font-family: 'MyrPro';
+//	src: url('../fonts/myriad/myriadpro-it-webfont.eot');
+//	src: url('../fonts/myriad/myriadpro-it-webfont.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/myriad/myriadpro-it-webfont.woff') format('woff'),
+//	url('../fonts/myriad/myriadpro-it-webfont.ttf') format('truetype'),
+//	url('../fonts/myriad/myriadpro-it-webfont.svg#MyriadProItalic') format('svg');
+//	font-weight: normal;
+//	font-style: italic;
+//}
+//
+//@font-face {
+//	font-family: 'MyrPro';
+//	src: url('../fonts/myriad/myriadpro-bold-webfont.eot');
+//	src: url('../fonts/myriad/myriadpro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/myriad/myriadpro-bold-webfont.woff') format('woff'),
+//	url('../fonts/myriad/myriadpro-bold-webfont.ttf') format('truetype'),
+//	url('../fonts/myriad/myriadpro-bold-webfont.svg#MyriadProBold') format('svg');
+//	font-weight: bold;
+//	font-style: normal;
+//}
+//
+//@font-face {
+//	font-family: 'MyrPro';
+//	src: url('../fonts/myriad/myrproregular-webfont.eot');
+//	src: url('../fonts/myriad/myrproregular-webfont.eot?#iefix') format('embedded-opentype'),
+//	url('../fonts/myriad/myrproregular-webfont.woff') format('woff'),
+//	url('../fonts/myriad/myrproregular-webfont.ttf') format('truetype'),
+//	url('../fonts/myriad/myrproregular-webfont.svg#MyrProRegular') format('svg');
+//	font-weight: normal;
+//	font-style: normal;
+//}
