--- a/sass/includes/_a.scss
+++ b/sass/includes/_a.scss
@@ -86,6 +86,10 @@
 	background-color: transparent;
 }
 
+.i-wai {
+	@include vishidden;
+}
+
 .i-img-container { // image wrapper
 	overflow: hidden;
 	@extend .i-dib;
