--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,20 @@ ins {
   background-color: transparent;
 }
 
+.i-wai {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+}
+.ie6-7 .i-wai {
+  clip: rect(1px 1px 1px 1px);
+}
+
 .i-img-container {
   overflow: hidden;
 }
@@ -1041,17 +1055,29 @@ ins {
   font-weight: normal;
   background: #ccc;
 }
-.form fieldset {
-  border: 1px solid #ccc;
-  margin: 0 2px;
-  margin-top: 1.28571em;
-  padding-top: 0.51429em;
-  padding-bottom: 1.28571em;
-  margin-bottom: 0em;
+.form .form__set {
+  position: relative;
+  border: none;
+  margin: 0;
+  padding: 20px 0 0;
 }
-.form legend {
+.form .form__set__legend {
   border: 0;
   padding: 0;
+  font-size: 16.814px;
+  font-weight: bold;
+}
+.form .form__set__legend span {
+  position: absolute;
+  top: 0;
+  left: 10px;
+}
+.form .form__set_main {
+  padding-top: 20px;
+}
+.form .form__set__legend_main {
+  font-size: 22.652px;
+  font-weight: bold;
 }
 .form button::-moz-focus-inner, .form input::-moz-focus-inner {
   border: 0;
@@ -1079,7 +1105,7 @@ ins {
 
 .form__row {
   clear: both;
-  padding: 10px 0;
+  padding: 5px 0;
   margin: 0 10px;
 }
 
@@ -1135,6 +1161,10 @@ ins {
 }
 .sb-w200 .dropdown ul {
   width: 198px !important;
+}
+
+.form_name2 .form__set__legend span {
+  left: 14px;
 }
 
 /* @end */
