bradcrumbs styles added

--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,15 @@ ins {
 /* ============================================================================
 		Main
 ============================================================================= */
+.breadcrumb ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.breadcrumb li {
+  display: inline;
+}
+
 /* ============================================================================
 		Aside
 ============================================================================= */
