--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -33,6 +33,19 @@
 		Main
 ============================================================================= */
 
+.breadcrumb {
+
+	ol {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	li {
+		display: inline;
+	}
+}
+
 /* ============================================================================
 		Aside
 ============================================================================= */
