--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,19 @@ footer, header, hgroup, nav, section {
   display: block;
 }
 
-audio, canvas, video {
+audio,
+canvas,
+video {
   display: inline-block;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before, blockquote:after,
+q:before,
+q:after {
   content: '';
 }
 
@@ -29,6 +34,11 @@ blockquote:before, blockquote:after, q:before, q:after {
   src: url("../fonts/ASLRubl/rouble-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/ASLRubl/rouble-webfont.woff") format("woff"), url("../fonts/ASLRubl/rouble-webfont.ttf") format("truetype"), url("../fonts/ASLRubl/rouble-webfont.svg#ALSRublRegular") format("svg");
   font-weight: normal;
   font-style: normal;
+}
+
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 body {
@@ -102,7 +112,10 @@ hr, .hr {
   margin: 1.28571em 0;
 }
 
-p, pre, blockquote, table {
+p,
+pre,
+blockquote,
+table {
   margin: 0;
   margin-bottom: 1.28571em;
 }
@@ -112,11 +125,14 @@ blockquote {
   font-style: italic;
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 }
 
-em, i, cite {
+em,
+i,
+cite {
   font-style: italic;
 }
 
@@ -125,6 +141,10 @@ a {
 }
 a:hover, a:active {
   color: #4db8ff;
+  outline: none;
+}
+a:focus {
+  outline: thin dotted;
 }
 
 /* embed content */
@@ -223,15 +243,17 @@ figure {
 		SPECIFIC HTML TAGS SUPPORT
 ============================================================================= */
 /* science */
-abbr, acronym {
+abbr,
+acronym {
   border-bottom: 1px dotted #3a3739;
   cursor: help;
   font-weight: inherit;
   text-transform: uppercase;
 }
 
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted #888;
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
   cursor: help;
 }
 
@@ -240,7 +262,11 @@ a abbr {
 }
 
 /* computer science */
-pre, code, tt, samp, kbd {
+pre,
+code,
+tt,
+samp,
+kbd {
   font-family: "Courier New", Courier, FreeMono, "Nimbus Mono L", monospace;
   font-size: 1em;
   line-height: 1.28571em;
@@ -973,6 +999,10 @@ ins {
   font: 1em/1.429em Arial, FreeSans, sans-serif;
   vertical-align: baseline;
 }
+.form button,
+.form input {
+  line-height: normal;
+}
 .form label {
   font-weight: normal;
 }
@@ -990,7 +1020,7 @@ ins {
   vertical-align: baseline;
 }
 .form input[type="search"] {
-  -webkit-appearance: none;
+  -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
@@ -1064,6 +1094,10 @@ ins {
   font-weight: normal;
   background: #ccc;
 }
+.form legend {
+  border: 0;
+  padding: 0;
+}
 .form .form__set {
   position: relative;
   border: none;
@@ -1100,8 +1134,8 @@ ins {
 }
 .form .ie6-7 input[type="checkbox"],
 .form .ie6-7 input[type="radio"] {
-  height: 13px;
-  width: 13px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
 .form_horiz label {
@@ -1192,12 +1226,14 @@ ins {
   line-height: 1.58926em;
   margin-bottom: 0.79463em;
 }
-.table td, .table th {
+.table td,
+.table th {
   vertical-align: middle;
   padding: 0 0.51429em;
   border: 1px solid #ccc;
 }
-thead .table td, thead .table th {
+thead .table td, thead
+.table th {
   font-weight: bold;
 }
 .table tbody td[colspan] {
